--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import './base/mixins';
 
 @import './components/navbar';
+@import './components/card';
 
 @import './layouts/hero';
 @import './layouts/about';
