--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,16 @@ html {
 .section {
   padding: 0 2rem; }
 
+.home-btn {
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+  font-size: 2.5rem; }
+  .home-btn a:link, .home-btn a:visited {
+    text-decoration: none; }
+    .home-btn a:link i, .home-btn a:visited i {
+      color: #17243D; }
+
 * {
   font-family: 'Rubik', sans-serif; }
 
@@ -187,6 +197,77 @@ html {
     justify-content: center;
     margin-bottom: 4rem; }
 
+.form {
+  padding: 3rem; }
+  @media only screen and (max-width: 622px) {
+    .form {
+      transform: translateX(-3rem); } }
+  @media only screen and (max-width: 422px) {
+    .form {
+      padding: 1rem; } }
+  .form-body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    background-color: #ffe066; }
+  .form-container {
+    width: 80rem;
+    padding: 2.5rem 4rem;
+    background-color: #fff;
+    box-shadow: 0 1rem 5rem rgba(0, 0, 0, 0.3); }
+  .form-row {
+    display: flex;
+    margin: 3rem 0;
+    width: 100%; }
+    .form-row-textarea {
+      height: 15rem; }
+    @media only screen and (max-width: 622px) {
+      .form-row {
+        flex-direction: column;
+        gap: 2rem; } }
+  .form-group {
+    width: 100%;
+    height: 4rem;
+    margin: 0 2rem;
+    position: relative; }
+  .form-input {
+    display: block;
+    height: 100%;
+    width: 100%;
+    border: 1px solid #17243D;
+    border-radius: 5px;
+    position: relative;
+    padding: 0 1rem;
+    color: #17243D; }
+    .form-input:valid ~ .form-label {
+      top: -2rem;
+      left: 0; }
+    .form-input:focus {
+      outline: none; }
+      .form-input:focus ~ .form-label {
+        top: -2rem;
+        left: 0; }
+    .form-input ~ .form-label {
+      transition: .3s;
+      position: absolute;
+      top: 1.5rem;
+      left: 1rem; }
+  .form-textarea {
+    height: 15rem;
+    padding: 1rem; }
+  .form-btn {
+    cursor: pointer;
+    background-color: #17243D;
+    color: #fff;
+    transition: .3s;
+    margin-top: 3rem;
+    transform: translateX(1rem); }
+    .form-btn:hover {
+      color: #17243D;
+      background-color: #fff; }
+
 .hero {
   display: flex;
   height: 92.2vh;
@@ -294,6 +375,9 @@ html {
   padding: 2rem;
   transition: .1s;
   cursor: pointer; }
+  @media only screen and (max-width: 392px) {
+    .menu-item {
+      padding: 1rem; } }
   .menu-item:hover {
     background-color: #ffe066;
     color: #fff; }
