--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -10,3 +10,17 @@ html{
 .section{
   padding: 0 2rem;
 }
+
+.home-btn{
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+  font-size: 2.5rem;
+  a:link, a:visited{
+    text-decoration: none;
+
+    i{
+      color: #17243D;
+    }
+  }
+}
