--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -11,6 +11,9 @@
     padding: 2rem;
     transition: .1s;
     cursor: pointer;
+    @include respond(392px){
+      padding: 1rem;
+    }
     &:hover{
       background-color: $yellow-light-2;
       color: #fff;
