--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 
 @import './components/navbar';
 @import './components/card';
+@import './components/form';
 
 @import './layouts/hero';
 @import './layouts/about';
