--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,8 @@
 @import './components/navbar';
 @import './components/card';
 @import './components/form';
+@import './components/carousel';
+@import './components/review';
 
 @import './layouts/hero';
 @import './layouts/about';
