--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,500;0,600;0,700;0,800;0,900;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cinzel&display=swap");
 * {
   padding: 0;
   margin: 0; }
+
+::selection {
+  background-color: #f59f00;
+  color: white; }
 
 html {
   font-size: 62.5%; }
@@ -285,6 +290,84 @@ html {
   @media only screen and (max-width: 1006px) {
     .form-heading {
       margin-top: -.3rem; } }
+
+.carousel {
+  width: 100%; }
+  .carousel-container {
+    display: flex;
+    overflow: hidden;
+    margin: auto;
+    width: 50rem; }
+    @media only screen and (max-width: 530px) {
+      .carousel-container {
+        width: 35rem; } }
+    @media only screen and (max-width: 392px) {
+      .carousel-container {
+        width: 30rem; } }
+  .carousel-inner {
+    display: flex;
+    transition: .3s; }
+    @media only screen and (max-width: 530px) {
+      .carousel-inner {
+        width: 35rem; } }
+    @media only screen and (max-width: 392px) {
+      .carousel-inner {
+        width: 30rem; } }
+  .carousel-slide {
+    width: 50rem; }
+    @media only screen and (max-width: 530px) {
+      .carousel-slide {
+        width: 35rem; } }
+    @media only screen and (max-width: 392px) {
+      .carousel-slide {
+        width: 30rem; } }
+  .carousel-btns {
+    margin-top: 3rem;
+    display: flex;
+    justify-content: center;
+    gap: 2rem; }
+    .carousel-btns button {
+      background-color: #fff;
+      outline: none;
+      border: none;
+      font-size: 2rem;
+      font-family: 'Rubik', sans-serif;
+      color: #e67700; }
+
+.review {
+  width: 100%;
+  position: relative;
+  border-radius: 6px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  @media only screen and (max-width: 530px) {
+    .review {
+      width: 35rem; } }
+  @media only screen and (max-width: 392px) {
+    .review {
+      width: 30rem; } }
+  .review-person {
+    display: flex;
+    align-items: center;
+    gap: 3rem; }
+  .review-img {
+    align-self: center;
+    height: 8rem;
+    border-radius: 50%; }
+  .review-name {
+    font-size: 2.4rem;
+    color: #e67700; }
+  .review-stars {
+    color: #17243D;
+    font-size: 1.4rem; }
+  .review-text {
+    margin-top: 1rem;
+    font-size: 1.7rem;
+    text-align: center;
+    color: #17243D;
+    line-height: 2.5rem;
+    font-size: 300; }
 
 .hero {
   display: flex;
