--- a/sass/components/_review.scss
+++ b/sass/components/_review.scss
@@ -7,7 +7,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  
+  width: 80rem;
+  @include respond(860px){
+    width: 50rem;
+  }
   @include respond(530px){
     width: 35rem;
   }
