--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import './components/form';
 @import './components/carousel';
 @import './components/review';
+@import './components/gallery';
 
 @import './layouts/hero';
 @import './layouts/about';
