--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -3,6 +3,7 @@
   margin: 0;
   margin-top: 2rem;
 
+
   &-container{
     gap: 1rem;
     display: grid;
@@ -33,9 +34,14 @@
   }
 
   &-img{
+    transition: 3s;
     width: 100%;
     height: 100%;
     object-fit: cover;
   }
 
+}
+
+.img-blur{
+  filter: blur(4px);
 }
