--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,7 +6,6 @@
 
 @import './components/navbar';
 @import './components/card';
-@import './components/form';
 @import './components/carousel';
 @import './components/review';
 @import './components/gallery';
@@ -14,3 +13,4 @@
 @import './layouts/hero';
 @import './layouts/about';
 @import './layouts/menu';
+@import './layouts/footer'
