--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import './base/typography';
 @import './base/mixins';
 @import './base/utilities';
+@import './base/animations';
 
 @import './components/navbar';
 @import './components/card';
