--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,4 +14,5 @@
 @import './layouts/hero';
 @import './layouts/about';
 @import './layouts/menu';
-@import './layouts/footer'
+@import './layouts/footer';
+@import './layouts/intro';
