--- a/css/style.css
+++ b/css/style.css
@@ -77,8 +77,7 @@ html {
     position: fixed;
     top: 0;
     width: 97.5%;
-    background-color: rgba(255, 255, 255, 0.8);
-    backdrop-filter: blur(10px); }
+    background-color: rgba(255, 255, 255, 0.8); }
     @media only screen and (max-width: 848px) {
       .navbar-sticky {
         width: 95%; } }
