--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,7 +1,8 @@
 .hero{
+
   display: flex;
   height: 92.2vh;
- 
+ overflow: hidden;
   align-items: center;
   justify-content: center;
   gap: 3rem;
@@ -16,6 +17,15 @@
   }
 
   &-img{
+    @include respond(408px){
+      margin-top: 4rem;
+    }
+    transform: translateX(100%);
+    @include respond(1167px){
+      transform: translateX(200%);
+    animation: move_in_right 1.5s 2.8s forwards;
+    }
+    animation: move_in_right 1s 2.8s forwards;
     width: 60rem;
     height: auto;
     @include respond(1167px){
@@ -33,6 +43,18 @@
       font-size: 3rem;
     }
     &-container{
+      transform: translateX(-102%);
+      @include respond(1167px){
+        transform: translateX(-125%);
+      }
+      @include respond(641px){
+        transform: translateX(-150%);
+      }
+      @include respond(503px){
+        transform: translateX(-225%);
+      animation: move_in_left 1s 2.8s ease-out forwards;
+      }
+      animation: move_in_left 1s 2.8s  forwards;
       width: 75%;
       @include respond(800px){
         display: flex;
