--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -12,8 +12,13 @@ html{
   font-size: 62.5%;
 }
 
+body{
+  overflow-x: hidden;
+}
+
 
 .section{
+  overflow-x: hidden;
   padding: 0 2rem;
   visibility: hidden;
   opacity: 0;
