--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,9 +10,11 @@
 @import './components/carousel';
 @import './components/review';
 @import './components/gallery';
+@import './components/form';
 
 @import './layouts/hero';
 @import './layouts/about';
 @import './layouts/menu';
 @import './layouts/footer';
 @import './layouts/intro';
+@import './layouts/contact';
